Deadlock issue in timeseries insert

XMLWordPrintableJSON

    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.0
    • Execution Team 2024-07-08
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      reopenBucket() might close the bucketĀ  , which will cause a write conflict in the following line. The write conflict is retried forever. The ClosedBucket, which causes the write conflict, is destructed by the caller of retry loop, thus deadlock.

            Assignee:
            Matt Kneiser
            Reporter:
            Daotang Yang
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: