SERVER-91772 Deadlock issue in timeseries insert (#24089)

GitOrigin-RevId: 1ce377cfd03140c5e9df53a5c634dbc099f15cf0